Create list and style it

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,19 @@
     <title>Wbpack Exercise</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <section class="to-do">
+      <ul>
+        <li class="list-head">
+            <h3>Today's To Do</h3>
+            <span>x</span>
+        </li>
+        <li>
+          <input type="text" id="add-list" placeholder="Add to your list">
+        </li>
+        <li>
+          <input type="checkbox" class="items-list" >hello</input>
+        </li>
+      </ul>
+    </section>
 </body>
 </html>
