Add font awesome, style the to-do-list, create array with tasks

--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,23 @@
 </head>
 <body>
     <section class="to-do">
-      <ul>
+      <ul class="to-do-list">
         <li class="list-head">
             <h3>Today's To Do</h3>
-            <span>x</span>
+            <i class="fa-solid fa-arrows-rotate"></i>
+
         </li>
         <li>
           <input type="text" id="add-list" placeholder="Add to your list">
+          <i class="fa-solid fa-right-to-bracket"></i>        
         </li>
+        
         <li>
-          <input type="checkbox" class="items-list" >hello</input>
+          <div>
+            <input type="checkbox" class="items-list" value="value">
+            <label for="vehicle1"> I have a bike</label>
+          </div>
+          <i class="fa-solid fa-ellipsis-vertical"></i>
         </li>
       </ul>
     </section>
