--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         </li>
         <li>
           <input type="text" id="add-list" placeholder="Add to your list">
-          <i class="fa-solid fa-right-to-bracket"></i>        
+          <i class="fa-solid fa-right-to-bracket add-btn" id="add-btn"></i>        
         </li>
       </ul>
     </section>
